integrated Identity and UI

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyBlogContext": "server=localhost;port=3306;database=razorwebdb;uid=root;password="
+  },
+  "MailSettings": {
+    "Mail": "xuanloi3135sasa@gmail.com",
+    "DisplayName": "Xuan Loi",
+    "Password": "aasasa",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
